--- a/src/style.css
+++ b/src/style.css
@@ -1,101 +1,145 @@
 
+
 #root{
-
-  
-    width: 428px;
-    height: 926px;
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
-    align-items:center;
-    flex-wrap: wrap;
-    background-color: rgb(180, 179, 179);
-}
-
-input {
-    flex-direction:column;
-    justify-content:flex-end;
-    justify-content:space-between;
-    border-radius: 7px;
-    color:gainsboro;
-}
-  
-button {
-    order:-2;
-    display:flex;
-    border-radius: 20px;   
-    padding: 1%;
-    align-items:left;
+ width: 428px;
+ height: 926px;
+ display:flex;
+ flex-direction:column;
+ justify-content:space-between;
+ align-items:center;
+ flex-wrap: wrap;
+ background-color: transparent;
 
 }
 
+
+/*layout1*/
 
 #logo {
-    position: absolute;
-width: 250px;
-height: 171.39px;
-left: 94px;
-top: 56px;  
-  
+position: absolute;
+left: 37px;
+width: 320px;
+height: 320px;
+top: -43px;
+justify-content: center;
+z-index: 2;
 }
 
 #blueLine{
-    position: absolute;
-width: 428px;
+position: absolute;
+width: 387px;
 height: 180px;
 left: 1px;
-top: 180px;
+top: 117px;
+}
+
+#inputEmailLogin {
+position: absolute;
+width: 295px;
+height: 51px;
+left: 44px;
+top: 335px;
+font-size: 20px;
+color:black;
+border-radius:7px;
+border-color: transparent;
+background-color:rgba(217, 217, 217, 0.34);
 }
 
 #passWordLog{
-    position: absolute;
-width: 351px;
+position: absolute;
+width: 295px;
 height: 51px;
 left: 44px;
-top: 504px;
+top: 420px;
+font-size: 20px;
+color:black;
+border-radius:7px;
+border-color: transparent;
+background-color:rgba(217, 217, 217, 0.34);
 }
 
 #buttonLogin{
-    position: absolute;
+position: absolute;
 width: 188px;
 height: 45px;
-left: 120px;
-top: 598px;
+left: 100px;
+top: 520px;
 text-align: center;
 font-size: 20px;
-color: red;
-
+font-family: 'Roboto';
+font-weight: 800;
+line-height: 23px;
+color: rgba(97, 93, 93, 0.71);
+border-radius:20px;
+background-color: rgba(195, 122, 55, 0.41);
+border-color: transparent;
 }
 
-#buttonGoogle{
-    position: absolute;
-width: 351px;
+#buttonGoogle {
+position: absolute;
+width: 295px;
 height: 51px;
 left: 44px;
-top: 699px;
+top: 605px;
+color: rgba(97, 93, 93, 0.71);
+border-radius:20px;
+font-size: 20px;
+font-weight: 800;
+background-color:rgba(217, 217, 217, 0.34);
+border-color: transparent;
+
 }
+
+#giM {
+position: absolute;
+width: 29px;
+height: 29px;
+left: 51px;
+top: 617px;
+z-index: 1;
+    
+}
+
+#questionLogin {
+position: absolute;
+width: 302px;
+height: 39px;
+left: 48px;
+top: 710px;
+font-family: 'Roboto';
+font-weight: 600;
+font-size: 21px;
+line-height: 25px;
+text-align: center;
+color: #615959;
+z-index: 2;
+}
+
 
 #buttonSignupLogin{
-    position: absolute;
-width: 304px;
-height: 78px;
-left: 69px;
-top: 807px;
+position: absolute;
+background-color: transparent;
+border-color: transparent;
 font-size: 20px;
-color:green ;
+color:rgba(9, 106, 217, 1);
+width: 90px;
+height: 39px;
+left: 160px;
+top: 775px;
+font-family: 'Roboto';
+font-weight: 700;
+font-size: 21px;
+line-height: 25px;
+text-align: center;
+text-decoration-line: underline;
 }
 
-#inputEmailLogin{
-    position: absolute;
-width: 351px;
-height: 51px;
-left: 44px;
-top: 410px;
-font-size: 20px;
-color:black;
-}
+
+
+
 /* Here start View 2*/
-#logo2{
+/*#logo2{
 position: absolute;
 width: 250px;
 height: 250px;
@@ -153,7 +197,7 @@ border-radius: 7px
 }
 
 /* Here start View 3*/
-#logoHome {
+/*#logoHome {
 position: absolute;
 width: 101px;
 height: 67.92px;
@@ -175,4 +219,4 @@ width: 26px;
 height: 26px;
 left: 364px;
 top: 810px;
-}
+}*/
