--- a/src/style.css
+++ b/src/style.css
@@ -345,24 +345,33 @@ textarea {
         width: 25px;
         height:25px;
         left:340px;
-        /*width: 72px;
-        height: 21.64px;*/
-        /*left: 294px;*/
         top: 15px;
         background-image: url(img/signOut.png);
     }
+    #flex-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 60%;
+    margin-top:120px;
+    margin-left: -2%;
+    
+ 
+   }
 
-    #conPosts {
-   
-    position: absolute;
-    width: 345px;
-    height: 129px;
-    left: 18px;
-    top: 178px;
-    border: transparent;
-    background: rgba(255, 205, 108, 0.34);
-    border-radius: 10px;
-    color:black
+    #sinMessage {
+        
+        width: 356px;
+        height: 100px;
+        left: 39px;
+        border-radius: 15px;
+        display: flex;
+        padding: 23px;
+        width: 270px;
+        margin-top: 30px;
+        margin-left: 2px;
+        background-color: bisque;
+        justify-content:space-between;
     
     }
     
