--- a/src/style.css
+++ b/src/style.css
@@ -348,16 +348,18 @@ textarea {
         top: 15px;
         background-image: url(img/signOut.png);
     }
-    #flex-container{
-    display: flex;
+    /*#flex-container{
+  display: flex;
     flex-direction: column;
     width: 100%;
-    height: 60%;
+    height: 100%;
     margin-top:120px;
     margin-left: -2%;
-    
+  
+    justify-content:space-between;
+    background-color: blue;
  
-   }
+   }*/
 
     #sinMessage {
         
@@ -374,4 +376,34 @@ textarea {
         justify-content:space-between;
     
     }
+
+    #btnDelete {
+        position: absolute;
+        width: 20px;
+        height:20px;
+        left: 340px;
+        top: 230px;
+        background-image: url(img/trashCan1.png);
     
+    }
+  
+    .containPost{
+     display: block;
+     flex-direction: column;
+     width: 100%;
+     height: 100%;
+     margin-top:120px;
+     justify-content:space-between;
+ 
+
+    }
+ /*es cada párrafo*/
+    .boxcontain{
+    position: absolute;
+    width: 500px;
+    height: 100px;
+    left: 39px;
+    top: 342px;
+    background-color: bisque;
+    
+    }
