--- a/src/style.css
+++ b/src/style.css
@@ -378,16 +378,18 @@ textarea {
     }
 
     #btnDelete {
-        position: absolute;
+        position: relative;
         width: 20px;
         height:20px;
-        left: 340px;
-        top: 230px;
-        background-image: url(img/trashCan1.png);
+        left: 300px;
+        top: -50px;
+        /*background-image: url(img/trashCan1.png);*/
     
     }
   
-    .containPost{
+   .containPost{
+        
+     flex-wrap:wrap;
      display: block;
      flex-direction: column;
      width: 100%;
@@ -395,15 +397,15 @@ textarea {
      margin-top:120px;
      justify-content:space-between;
  
-
     }
  /*es cada párrafo*/
     .boxcontain{
-    position: absolute;
-    width: 500px;
+    flex-wrap: wrap;
+    width: 300px;
     height: 100px;
-    left: 39px;
-    top: 342px;
+    top: 130px;
     background-color: bisque;
-    
+    border-radius: 15px;
+    padding: 5%;
+  
     }
