--- a/src/style.css
+++ b/src/style.css
@@ -298,11 +298,10 @@ textarea {
     #btnSend {
     font-family: 'Roboto';
     position: absolute;
-    width: 44px;
+    width: 26px;
     height: 26px;
     left: 334px;
     top: 745px;
-    background-color:rgba(9, 106, 217, 1);
     font-style: oblique;
     color:rgb(241, 239, 239)
     }
@@ -317,23 +316,30 @@ textarea {
     border-radius: 10px;
     color:black
     }
-    #btnUpdate {
-    position: absolute;
-    width: 55.43px;
-    height: 26.57px;
-    left: 109px;
-    top: 276px;
+    /*#btnEdit {
+    
+        position: relative;
+        width: 60px;
+        height:20px;
+        left: 75px;
+        top: -393px;
+        border-radius: 11px;
     background-color:rgba(61, 97, 122, 1);
     font-style: oblique;
     color:rgb(241, 239, 239);
     z-index:2;
-    }
-    #btnCancel {
+    }*/
+    #btnSave {
+    text-align: center;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    border-radius: 11px;
     position: absolute;
     width: 55.43px;
-    height: 26.57px;
+    height: 20px;
     left: 173.57px;
-    top: 276px;
+    top: 240px;
     background-color:rgba(61, 97, 122, 1);
     font-style: oblique;
     color:rgb(241, 239, 239);
@@ -344,23 +350,11 @@ textarea {
         position: absolute;
         width: 25px;
         height:25px;
-        left:340px;
+        left:390px;
         top: 15px;
         background-image: url(img/signOut.png);
     }
-    /*#flex-container{
-  display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    margin-top:120px;
-    margin-left: -2%;
-  
-    justify-content:space-between;
-    background-color: blue;
  
-   }*/
-
     #sinMessage {
         
         width: 356px;
@@ -382,8 +376,8 @@ textarea {
         width: 20px;
         height:20px;
         left: 300px;
-        top: -50px;
-        /*background-image: url(img/trashCan1.png);*/
+        top: -45px;
+    
     
     }
   
@@ -408,4 +402,12 @@ textarea {
     border-radius: 15px;
     padding: 5%;
   
+    }
+
+    #btnEdit {
+    position: absolute;
+    width: 28.21px;
+    height: 22.92px;
+    left: 340px;
+    top: 237px;
     }
