--- a/src/style.css
+++ b/src/style.css
@@ -285,26 +285,24 @@ textarea {
     top: 47px;
     }
     #userInputPost{
+    display: block;
     font-family: 'Roboto';
     position: absolute;
     width: 302px;
     height: 87px;
     left: 22px;
-    top: 712px;
+    top: 147px;
     background: rgba(62, 138, 162, 0.34);
+    resize: none;
     border-radius: 10px;
     color:black
     }
     #btnSend {
-    font-family: 'Roboto';
     position: absolute;
-    width: 44px;
+    width: 26px;
     height: 26px;
     left: 334px;
-    top: 745px;
-    background-color:rgba(9, 106, 217, 1);
-    font-style: oblique;
-    color:rgb(241, 239, 239)
+    top: 177px;
     }
     #userInputEdit{
     position: absolute;
@@ -317,28 +315,39 @@ textarea {
     border-radius: 10px;
     color:black
     }
-    #btnUpdate {
-    position: absolute;
-    width: 55.43px;
-    height: 26.57px;
-    left: 109px;
-    top: 276px;
-    background-color:rgba(61, 97, 122, 1);
-    font-style: oblique;
-    color:rgb(241, 239, 239);
-    z-index:2;
+    .btnLike {
+        position: relative;
+        width: 23.43px;
+        height: 18.57px;
+        left: 259px;
+        top: 57px;
+        
     }
-    #btnCancel {
-    position: absolute;
-    width: 55.43px;
-    height: 26.57px;
-    left: 173.57px;
-    top: 276px;
-    background-color:rgba(61, 97, 122, 1);
-    font-style: oblique;
-    color:rgb(241, 239, 239);
-    z-index: 2;
+    .btnDelete {
+    position: relative;
+    width: 23.43px;
+    height: 29.57px;
+    left: 283px;
+    top: 83px;
+   
     }
+
+    .btnEdit {
+        position: relative;
+        width: 23.43px;
+        height: 29.57px;
+        left: 233px;
+        top: 83px;
+       
+        }
+    .btnSave {
+        position: relative;
+        width: 66.43px;
+        height: 21.57px;
+        left: 127px;
+        top: 73px;
+        font-size: smaller;
+           }
 
     #userLogOut{
         position: absolute;
@@ -348,30 +357,29 @@ textarea {
         top: 15px;
         background-image: url(img/signOut.png);
     }
-    #flex-container{
-    display: flex;
+    #containerpost{
+    display: block;
+    justify-items: center;
     flex-direction: column;
-    width: 100%;
-    height: 60%;
-    margin-top:120px;
-    margin-left: -2%;
-    
- 
-   }
+    width: 307px;
+    height: 100%;
+    margin-top:253px;
+    margin-left: -88px;
 
-    #sinMessage {
-        
-        width: 356px;
-        height: 100px;
-        left: 39px;
-        border-radius: 15px;
-        display: flex;
-        padding: 23px;
-        width: 270px;
-        margin-top: 30px;
-        margin-left: 2px;
-        background-color: bisque;
-        justify-content:space-between;
     
+     
+    }
+    .textmessage{
+        width: 269px;
+        height: 46px;
+        background-color: bisque;
+        border-color: bisque;
+        border-radius: 10px;
+        font-family: 'Roboto';
+        font-size: medium;
+        padding: 20px;
+        resize: none;
+   
+        
     }
     
